--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/slide.css">
-    <script src="javaScript/slide.js" async></script>
+    
     <title>Slide</title>
 </head>
 
 <body>
 
     <section class="slide">
+        <p id="containBtn__comptSlide"></p>
 
         <div class="containSlide containSlide--active">
 
@@ -24,7 +25,7 @@
             </div>
 
             <div class="containSlide__txt">
-                <p>Premiere description</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione excepturi ex, quod harum quis velit illo. Molestias non at quibusdam qui illo, numquam unde maxime? Dolor animi, optio non minima id deserunt, nostrum cumque doloribus reprehenderit dolores quidem dicta sed nulla. Similique dolorum autem necessitatibus quod nostrum quo assumenda reiciendis.</p>
             </div>
 
         </div>
@@ -38,7 +39,7 @@
             </div>
 
             <div class="containSlide__txt">
-                <p>deuxieme description</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi necessitatibus natus facilis, dolore cupiditate impedit odit totam doloribus unde, neque quod in dicta! Minima eos nam est possimus officia tenetur!</p>
             </div>
 
         </div>
@@ -52,7 +53,7 @@
             </div>
 
             <div class="containSlide__txt">
-                <p>troisieme description</p>
+                <p>adda Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sit ipsam cumque beatae vitae quisquam nobis amet alias tempora qui ipsum ab voluptate impedit numquam distinctio ratione laborum, repellat quis. Magni, dolor expedita inventore amet modi facilis quos rem nisi harum.</p>
             </div>
 
         </div>
@@ -66,7 +67,7 @@
             </div>
 
             <div class="containSlide__txt">
-                <p>quatrieme description</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis ullam praesentium eligendi tempore aspernatur eos pariatur corporis harum perspiciatis non quae enim rerum quam fugit nobis, voluptatem architecto sed, sit quos. Cupiditate, repellendus rem non blanditiis molestias eveniet distinctio nulla inventore officiis, repudiandae at consequuntur perspiciatis neque hic et vitae sint sequi placeat, quis illo fugit voluptatum. Laudantium, neque nostrum? Explicabo accusantium perspiciatis fugit veritatis, ducimus harum voluptatem exercitationem nam? Optio labore voluptates ipsam minima cum illum quas architecto eligendi?</p>
             </div>
 
         </div>
@@ -80,18 +81,19 @@
             </div>
 
             <div class="containSlide__txt">
-                <p>cinquieme description</p>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem, voluptatibus unde. Voluptatum, rerum expedita! Expedita est, maiores alias totam nulla ducimus veniam ad dolor, eum, officia quod ipsa nobis suscipit unde cum accusantium delectus voluptates laborum? Tenetur distinctio suscipit magnam assumenda, maiores beatae impedit cupiditate placeat eveniet blanditiis voluptatem soluta cumque sint harum delectus adipisci sed quibusdam non deleniti. Maxime velit necessitatibus deserunt voluptas voluptates non culpa dicta, reiciendis alias?</p>
             </div>
 
         </div>
 
         <div class="containBtn">
+            
             <button class="slideSuivant">Suivant</button>
             <button class="slidePrecedent">Précedent</button>
         </div>
 
     </section>
-
+    <script src="javaScript/slide.js" async></script>
 </body>
 
 </html>
